[gd_scene load_steps=4 format=3 uid="uid://iubdfnqeubou"]

[ext_resource type="Script" path="res://scenes/worlds/customize.gd" id="1_en5k6"]
[ext_resource type="PackedScene" uid="uid://dratnwjfldduc" path="res://scenes/entities/player/player.tscn" id="1_nbcx4"]
[ext_resource type="FontFile" uid="uid://cy7k1vds10ifh" path="res://assets/monogram.ttf" id="3_jou1a"]

[node name="customize" type="Node2D"]
script = ExtResource("1_en5k6")

[node name="Player" parent="." instance=ExtResource("1_nbcx4")]
position = Vector2(175, 147)
scale = Vector2(2.68496, 2.68496)
script = null
metadata/_edit_group_ = true

[node name="CanvasGroup" parent="Player/ROOT" index="0"]
material = null

[node name="BROWS" parent="Player/ROOT" index="1"]
position = Vector2(0, -7.62939e-06)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 98.0
offset_top = 3.0
offset_right = 251.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("3_jou1a")
theme_override_font_sizes/font_size = 28
text = "CHAD"
placeholder_text = "NAME"
alignment = 1
caret_blink = true
caret_column = 4
caret_force_displayed = true

[node name="HeadLeft" type="Button" parent="Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 47.0
offset_right = 139.0
offset_bottom = 78.0
scale = Vector2(-1, 1)
text = "⮞"

[node name="HeadRight" type="Button" parent="Control"]
layout_mode = 0
offset_left = 234.0
offset_top = 46.0
offset_right = 261.0
offset_bottom = 77.0
text = "⮞"

[node name="TorsoLeft" type="Button" parent="Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 84.0
offset_right = 139.0
offset_bottom = 115.0
scale = Vector2(-1, 1)
text = "⮞"

[node name="TorsoRight" type="Button" parent="Control"]
layout_mode = 0
offset_left = 234.0
offset_top = 83.0
offset_right = 261.0
offset_bottom = 114.0
text = "⮞"

[node name="PantLeft" type="Button" parent="Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 120.0
offset_right = 139.0
offset_bottom = 151.0
scale = Vector2(-1, 1)
text = "⮞"

[node name="PantRight" type="Button" parent="Control"]
layout_mode = 0
offset_left = 234.0
offset_top = 119.0
offset_right = 261.0
offset_bottom = 150.0
text = "⮞"

[node name="Random" type="Button" parent="Control"]
layout_mode = 0
offset_left = 129.0
offset_top = 165.0
offset_right = 160.0
offset_bottom = 196.0
theme_override_fonts/font = ExtResource("3_jou1a")
theme_override_font_sizes/font_size = 16
text = "⚄"

[node name="Start" type="Button" parent="Control"]
layout_mode = 0
offset_left = 165.0
offset_top = 165.0
offset_right = 221.0
offset_bottom = 196.0
theme_override_fonts/font = ExtResource("3_jou1a")
theme_override_font_sizes/font_size = 16
text = "START"

[connection signal="pressed" from="Control/HeadLeft" to="." method="head_left"]
[connection signal="pressed" from="Control/HeadRight" to="." method="head_right"]
[connection signal="pressed" from="Control/TorsoLeft" to="." method="torso_left"]
[connection signal="pressed" from="Control/TorsoRight" to="." method="torso_right"]
[connection signal="pressed" from="Control/PantLeft" to="." method="pants_left"]
[connection signal="pressed" from="Control/PantRight" to="." method="pants_right"]
[connection signal="pressed" from="Control/Random" to="." method="random"]
[connection signal="pressed" from="Control/Start" to="." method="start"]

[editable path="Player"]
